- Oven transforms reviewed for all items
- SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
- WHY ARE FRIED BALLS DOING IT TOO????
- Peanut butter fixed so it gives nutrients when in bowl/bucket
- Acorn muffin recipe fixed so it stops crashing in handbook
- Apple syrup textures working in fruit bread/muffins - DONE!!!

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- Peanut skin model changed
- Soybean textures/shapes updated
- Primitive survival patches reviewed
- FIX THE FUCKING TRADER SPAWNS!!! STOP SPAWNING IN WATER STOP IT STOP IT STOP ITTTTTTTTTTTTTTTTTT
- WHYYYYY IS SALAD DRESSING NOT WORKING IN MEALS??????????????????????
- use the new 'NutritionPropertiesPerLitreInMeal' stuff
- Healing over time implemented for all items
- Soulstorm Brew makes you psychedelic now?
- Items can go into crocks? New labels for everything?
- Pickled cabbage transform reviewed
- Aged spirit/cider text and visuals revised and updated

2.0.0-dev.6

HANDBOOK THINGS:
- Sap collecting info moved from handbook guide to spile and sap entries
- Vanilla dough grouped in handbook
- Handbook entries added for almost every item and food
- Text added to vanilla entries for cider/spirits to explain EF aging
- Text added to vanilla dough to explain EF expansions

REBALANCING:
- Cheese in meal patched removed; now handled in vanilla
- Cottage cheese patch adding "nutritionPropsWhenInMeal" removed
- Dried seaweed production chain lengthened; now it must be washed and dried before roasting in the oven
- Dried seaweed nutrition buffed from 20 to 30; nutritionPropsWhenInMeal buffed from 30 to 45
- Default gelatin nutrition turned from Protein back to Fruit
- Soaked soybeans require 3 days in barrel, down from 14
- Cultured soybeans require 7 days in barrel, down from 14