@@ -1,5 +1,5 @@
 ﻿[
-  {
+    {
 		"Ingredients": [
 			{ "type": "item", "code": "waterportion", "quantity": 100 },
 			{ "type": "item", "code": "expandedfoods:pasta-cut", "quantity": 1 }
@@ -12,7 +12,7 @@
 			"smeltedStack": { "type": "item", "code": "expandedfoods:pasta-cooked" },
 			"requiresContainer": false
 		}
-  },
+    },
 	{
 		"Ingredients": [
 			{ "type": "item", "code": "waterportion", "quantity": 100 },
@@ -26,7 +26,7 @@
 			"smeltedStack": { "type": "item", "code": "expandedfoods:pasta-cooked" },
 			"requiresContainer": false
 		}
-  },
+    },
 	{
 		"Ingredients": [
 			{ "type": "item", "code": "waterportion", "quantity": 100 },
@@ -40,5 +40,5 @@
 			"smeltedStack": { "type": "item", "code": "expandedfoods:pasta-cooked" },
 			"requiresContainer": false
 		}
-  }
+    }
 ]
