@@ -119,11 +119,13 @@ BUG FIXES:
 - Peanut butter fixed so it gives nutrients when in bowl/bucket
 - Acorn muffin recipe fixed so it stops crashing in handbook
 - Apple syrup textures working in fruit bread/muffins - DONE!!!
+- Mash textures in troughs fixed
 
 NEW FOOD:
 - added meatloaf?
 - added walnut/sunflower butter?
 - Dehydrated yeast added (cook in cooking pot; grind result)
+- Dried pasta added (thanks to Origami!) - DONE!!!
 
 MISC: 
 - Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
